[ATK] Leak: Leak in WebKitAccessibleTextGetText https://bugs.webkit.org/show_bug.cgi?id=118596

Patch by Brian Holt <brian.holt@samsung.com> on 2013-07-15
Reviewed by Carlos Garcia Campos.

Fixed memory leak.

* accessibility/atk/WebKitAccessibleInterfaceText.cpp:
(getGailTextUtilForAtk):

Canonical link: https://commits.webkit.org/136567@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152631 268f45cc-cd09-0410-ab3c-d52691b4dbfc